Fix wrapping on startups banners

--- a/_assets/stylesheets/components/_card-deck-4.scss
+++ b/_assets/stylesheets/components/_card-deck-4.scss
@@ -2,6 +2,9 @@
   .card-header { padding: .5rem .65rem; background-color: $brand-secondary; font-size: .9rem; font-weight: 500; letter-spacing: .6px; color: #FFFFFF; border-bottom: none; }
   .card-footer { background-color: transparent; border-top: none; }
 }
+@include media-breakpoint-only(lg) {
+  .card-deck-4 .card .card-header { padding: 0.8rem 0.65rem; font-size: 0.7rem; }
+}
 @include media-breakpoint-down(md) {
   .card-deck-4 { margin: 0 -1rem -0.5rem; }
   .card-deck-4 .card {
